--- a/helm/mamaloo-app/values-dev.yaml
+++ b/helm/mamaloo-app/values-dev.yaml
@@ -1,25 +1,94 @@
+# Replicas
 replicaCount: 1
 
+# Namespace
+namespace: mamaloo-dev
+
+# Backend
 backend:
   image:
+    repository: portal-mamaloo-backend
     tag: "dev"
-  env:
-    - name: ENVIRONMENT
-      value: "development"
-    - name: DEBUG
-      value: "true"
+    pullPolicy: IfNotPresent
+  port: 8025
+  environment: development
+  debug: "true"
+  secretKey: "dev-secret-key"
+  jwtSecret: "dev-jwt-secret"
+  allowedOrigins: "http://localhost:5185,http://127.0.0.1:5185"
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "100m"
+    limits:
+      memory: "256Mi"
+      cpu: "500m"
 
+# Frontend
+frontend:
+  image:
+    repository: portal-mamaloo-frontend
+    tag: "dev"
+    pullPolicy: IfNotPresent
+  port: 5185
+  apiUrl: "http://localhost:8025"
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "50m"
+    limits:
+      memory: "128Mi"
+      cpu: "250m"
+
+# Database (PostgreSQL)
 database:
-  password: dev-password-123
-  database: mamaloo_dev
+  enabled: true
+  image:
+    repository: postgres
+    tag: "15-alpine"
+    pullPolicy: IfNotPresent
+  port: 5432
+  user: postgres
+  password: "dev-password-123"
+  name: mamaloo_dev
+  persistence:
+    enabled: true
+    storageClass: "standard"
+    size: 1Gi
 
+# Volumes
+uploads:
+  storage: 2Gi
+
+logs:
+  storage: 1Gi
+
+# Ingress
 ingress:
+  enabled: true
+  className: nginx
   hosts:
     - host: mamaloo-dev.local
       paths:
-        - path: /api
-          pathType: Prefix
-          service: backend
         - path: /
           pathType: Prefix
           service: frontend
+          port: 5185
+    - host: api.mamaloo-dev.local
+      paths:
+        - path: /
+          pathType: Prefix
+          service: backend
+          port: 8025
+
+# Auto-scaling
+autoscaling:
+  backend:
+    enabled: false
+  frontend:
+    enabled: false
+
+# Migrations
+migrations:
+  enabled: true
+  argocdSyncWave: "-1"
