--- a/helm/mamaloo-app/values.yaml
+++ b/helm/mamaloo-app/values.yaml
@@ -1,17 +1,8 @@
-# Configurações globais
-replicaCount: 1
-
 backend:
   image:
-    repository: ghcr.io/analarie/portal-mamaloo-backend
+    repository: portal-mamaloo-backend
     tag: "latest"
     pullPolicy: Always
-  service:
-    type: ClusterIP
-    port: 8025
-  env:
-    - name: ENVIRONMENT
-      value: "production"
   resources:
     limits:
       cpu: 500m
@@ -19,15 +10,29 @@ backend:
     requests:
       cpu: 250m
       memory: 256Mi
+  service:
+    port: 8025
+    targetPort: 8025
+
+database:
+  enabled: true
+  user: "postgres"
+  password: "changeme"
+  database: "mamaloo"
+  port: 5432
+  service:
+    type: ClusterIP
+    port: 5432
+  persistence:
+    enabled: false
+    size: 1Gi
+    storageClass: standard
 
 frontend:
   image:
-    repository: ghcr.io/analarie/portal-mamaloo-frontend
+    repository: portal-mamaloo-frontend
     tag: "latest"
     pullPolicy: Always
-  service:
-    type: ClusterIP
-    port: 80
   resources:
     limits:
       cpu: 200m
@@ -35,31 +40,16 @@ frontend:
     requests:
       cpu: 100m
       memory: 128Mi
+  service:
+    port: 80
+    targetPort: 80
 
-database:
-  enabled: true
-  user: postgres
-  password: mamaloo-postgres-secret
-  database: mamaloo_db
-  port: 5432
-  persistence:
-    enabled: true
-    size: 5Gi
-    storageClass: standard
-
-migrations:
-  enabled: true
-  backoffLimit: 3
+replicaCount: 1
 
 ingress:
-  enabled: true
+  enabled: false
   className: nginx
-  hosts:
-    - host: mamaloo.local
-      paths:
-        - path: /api
-          pathType: Prefix
-          service: backend
-        - path: /
-          pathType: Prefix
-          service: frontend
+  hosts: []
+migrations:
+  enabled: true
+  argocdSyncWave: "-1"
